checked on smartphone and find that slider position correct, but in devtools isn't, updated font size and weight, they were too small

--- a/src/styles/blocks/slider-about.scss
+++ b/src/styles/blocks/slider-about.scss
@@ -33,7 +33,9 @@
     border: none;
     font-family: inherit;
     @include circle(30px);
-    font-size: 15px;
+    font-size: 25px;
+    font-weight: 700;
+    color: $c-main-dark;
 
     @include onTablet {
       display: none;
